--- a/cover.tex
+++ b/cover.tex
@@ -1,5 +1,5 @@
-\title{\huge 國立臺灣大學學生會法規彙編} % 設置標題，使用巨大字體
-\date{108學年度第2會期} % 設置日期
+\title{\huge 元智大學學生會法規彙編} % 設置標題，使用巨大字體
+\date{111學年度第1會期} % 設置日期
 \usepackage{titling}
 \setlength{\droptitle}{-8em} % 將標題移動至頁面的上面
 
@@ -7,7 +7,7 @@
 \usepackage{lastpage}
 \pagestyle{fancyplain}
 \lhead{} % 左頁首
-\chead{\fontst 國立臺灣大學學生會法規彙編 108學年度第2會期} % 中頁首
+\chead{\fontst 元智大學學生會法規彙編 111學年度第1會期} % 中頁首
 \rhead{\fancyplain{}} % 右頁首
 \lfoot{} % 左頁尾
 \cfoot{} % 中頁尾
@@ -33,7 +33,7 @@
 \thispagestyle{empty}
 \vspace*{\fill}
 \begin{center}
-\huge {\fontheiti 我\\們\\貢\\獻\\這\\所\\大\\學\\于\\宇\\宙\\之\\精\\神\\。}
+\huge {\fontheiti 學\\生\\自\\治\\，\\你\\我\\共\\創\\。}
 \end{center}
 \vspace*{\fill}
 
